fixed opening not showing right after the website being loaded.

--- a/src/animation/opening/style.module.scss
+++ b/src/animation/opening/style.module.scss
@@ -8,7 +8,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: 9999;
+    z-index: 999999;
 }
 
 .loaderContent {
@@ -31,7 +31,7 @@
     line-height: 1;
     padding: 0 0.5rem;
     text-transform: uppercase;
-    font-family: var(--title-font);
+    font-family: var(--subtitle-font);
     color: var(--accent-color);
 
     @media (max-width: 555px) {
@@ -42,7 +42,7 @@
 
 .copy {
     font-size: 5rem;
-    font-family: var(--title-font);
+    font-family: var(--subtitle-font);
     text-transform: uppercase;
     line-height: 1;
     color: var(--accent-color);
