--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -36,6 +36,7 @@
   width: 100%;
   background: #F2F0EBbb;
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(5px);
   border: 1px solid #dadada9b;
   border-top-left-radius: 2rem;
   border-top-right-radius: 2rem;
