--- a/src/components/footer/style.module.scss
+++ b/src/components/footer/style.module.scss
@@ -139,3 +139,61 @@
 
     }
 }
+
+.noise::before {
+    content: "";
+    background-image: url("../../../public/assets/noise.webp");
+    height: 300%;
+    left: -50%;
+    opacity: .046;
+    top: -100%;
+    width: 300%;
+    animation: 14s steps(10) infinite grain;
+    pointer-events: none;
+    z-index: 99999999999;
+    position: absolute
+}
+
+@keyframes grain {
+
+    0%,
+    100% {
+        transform: translate(0, 0)
+    }
+
+    10% {
+        transform: translate(-5%, -10%)
+    }
+
+    20% {
+        transform: translate(-15%, 5%)
+    }
+
+    30% {
+        transform: translate(7%, -25%)
+    }
+
+    40% {
+        transform: translate(-5%, 25%)
+    }
+
+    50% {
+        transform: translate(-15%, 10%)
+    }
+
+    60% {
+        transform: translate(15%, 0)
+    }
+
+    70% {
+        transform: translate(0, 15%)
+    }
+
+    80% {
+        transform: translate(3%, 15%)
+    }
+
+    90% {
+        transform: translate(-10%, 10%)
+    }
+}
